--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav>
       <div id="nav">
-        <p>sunnyside</p>
+        <p>logo</p>
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
